@@ -129,6 +129,8 @@ fully support the editing toolbar, but was found to be too confusing.
 * (bug 3595) Warn and abort if importDump.php called in read-only mode.
 * (bug 3598) Update message cache on message page deletion, patch by Tietew
 * Added separate newarticletext messages for logged in and anon users.
+* Blacklist additional MSIE CSS safety tricks
+
 
 === Caveats ===
 
